app/assets/stylesheets/pages/assessments.sass
#assessments-filter
  margin-left: -1em

.assessments
  .assessment
    height: 5em
    margin-top: 1em
    margin-bottom: 1px
    border-bottom: 1px solid #dcdbd4
    background-color: #EBECF0
    clear: both
    min-height: 6em
    .stat-row
      margin-top: 1em
    .assessment-stat
      margin-right: -1em
      *
        font-size: 1.0em
      .category
        font-weight: 300
      .stat
        font-weight: bold

    .name
      height: 1em
      margin-top: 0
      white-space: nowrap
      overflow: hidden
      text-overflow: ellipsis
      color: #237bae
      .fa-lock
        font-size: 0.5em
        color: #7E8798
    .overview
      height: 100%
      padding: 0
      text-align: center
      text-transform: uppercase
      *
        color: #fff
      .type
        font-size: 0.8em
        font-family: $heading-font-family
      .status
        padding-top: .5em
        *
          font-size: 1.6em
    .links
      padding: 0
      margin-top: 0.26em
      padding-right: 0.26em
      *
        padding: 0
      .link
        padding-bottom: 1px
        .link-button
          margin-bottom: 0.26em
          padding-left: 0.25em
          padding-right: 0.25em

      .fa, a, .title
        color: #fff
      a
        width: 100%
        font-weight: 300
  .details
    height: 100%
    &.active
      cursor: hand
      cursor: pointer
  .assessment-footer
    height: 2.3em
    line-height: 2em
    background-color: #EBECF0
    border-bottom: 1px solid #dcdbd4
    clear: both
    .participants-details
      height: 2em
      width: 40%
      overflow: hidden

    .district-name
      text-align: right
    .avatar
      height: 100%
/* no-gutters Class Rules */
.row.no-gutters
  margin-right: 0
  margin-left: 0

.row.no-gutters [class^="col-"], .row.no-gutters [class*=" col-"]
  padding-right: 0
  padding-left: 0

/* no-gutters-first-last Class Rules */
// added this spefically to target the "participant/completed/meeting" group. Left padding was stacking from parent col div giving it twice the [adding necessary.
.no-gutter-left
  padding-left: 0
  margin-left: 0

/* Media Query screen col-xs */
@media (max-width: 768px)
  .assessments
    .details
      font-size: 0.8em
    .assessment
      .links
        .link
          .link-button
            font-size: 0.9em
    .assessment-footer
      .subheading-text
        font-size: 0.8em
      .district-name
        font-size: 0.8em

